Inkwell: inline screenshots, Java 25 fix, finalize submission docs